--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
           extend: {
             colors: {
               clifford: '#E76F51',
-              'bike-primary': '#E76F51'
+              'bike-primary': '#E76F51',
+              'bike-primary-bg': '#fdf0ed'
             }
           }
         }
@@ -93,10 +94,153 @@
           </div>
         </div>
       </nav>
+      <!-- banner slider carousel -->
+      <div
+        class="carousel w-full md:h-[550px] bg-bike-primary-bg rounded-xl mt-10"
+      >
+        <!-- slide 1 -->
+        <div id="slide1" class="carousel-item relative w-full">
+          <div
+            class="grid grid-cols-1 md:grid-cols-2 gap-8 items-center p-8 md:p-20 lg:p-28"
+          >
+            <!-- text content -->
+            <div class="flex-row space-y-6">
+              <h1 class="text-6xl font-bold">
+                Ride-on R15 V4 <br />
+                with Smile
+              </h1>
+              <p>
+                Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                amet sint. Velit officia consequat duis enim velit mollit.
+              </p>
+              <button class="btn bg-bike-primary text-white">Purchase</button>
+            </div>
+            <!-- image content -->
+            <div>
+              <img src="./images/slider/bike3.png" class="w-[450px]" />
+            </div>
+          </div>
+          <div
+            class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between"
+          >
+            <a href="#slide3" class="btn btn-circle">❮</a>
+            <a href="#slide2" class="btn btn-circle">❯</a>
+          </div>
+        </div>
+        <!-- slide 2 -->
+        <div id="slide2" class="carousel-item relative w-full">
+          <div class="grid grid-cols-1 md:grid-cols-2 gap-8 items-center p-28">
+            <!-- text content -->
+            <div class="flex-row space-y-6">
+              <h1 class="text-6xl font-bold">
+                Ride-on R15 V4 <br />
+                with Smile
+              </h1>
+              <p>
+                Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                amet sint. Velit officia consequat duis enim velit mollit.
+              </p>
+              <button class="btn bg-bike-primary text-white">Purchase</button>
+            </div>
+            <!-- image content -->
+            <div>
+              <img src="./images/slider/bike4.png" class="w-[450px]" />
+            </div>
+          </div>
+          <div
+            class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between"
+          >
+            <a href="#slide1" class="btn btn-circle">❮</a>
+            <a href="#slide3" class="btn btn-circle">❯</a>
+          </div>
+        </div>
+        <!-- slide 3 -->
+        <div id="slide3" class="carousel-item relative w-full">
+          <div class="grid grid-cols-1 md:grid-cols-2 gap-8 items-center p-28">
+            <!-- text content -->
+            <div class="flex-row space-y-6">
+              <h1 class="text-6xl font-bold">
+                Ride-on R15 V4 <br />
+                with Smile
+              </h1>
+              <p>
+                Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                amet sint. Velit officia consequat duis enim velit mollit.
+              </p>
+              <button class="btn bg-bike-primary text-white">Purchase</button>
+            </div>
+            <!-- image content -->
+            <div>
+              <img src="./images/slider/bike1.png" class="w-[450px]" />
+            </div>
+          </div>
+          <div
+            class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between"
+          >
+            <a href="#slide2" class="btn btn-circle">❮</a>
+            <a href="#slide1" class="btn btn-circle">❯</a>
+          </div>
+        </div>
+      </div>
     </header>
 
     <!-- Main Section -->
-    <main class="container mx-auto"></main>
+    <main class="container mx-auto mt-10">
+      <!-- text content -->
+      <div class="text-center">
+        <h3 class="text-4xl md:text-5xl mb-4">Featured Bikes In This Year</h3>
+        <p class="text-orange-400 mb-1">Best bike collection</p>
+        <div class="border-b-2 border-orange-400 w-20 mx-auto"></div>
+      </div>
+      <!-- card content -->
+       <div class="mt-10 mb-10 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-5">
+         <!-- card-1 -->
+        <div class="card bg-base-100 md:w-full shadow-xl">
+          <figure>
+            <img class="w-10/12"
+              src="./images/others/latest1.png"
+              alt="Shoes" />
+          </figure>
+          <div class="px-14 md:px-10 py-6 md:py-3 space-y-3">
+            <h2 class="card-title text-2xl font-bold">Ducati XDIAVEL S-73</h2>
+            <p class="text-gray-500">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+            <div class="card-actions">
+              <button class="btn bg-bike-primary">Read More</button>
+            </div>
+          </div>
+      </div>
+         <!-- card-2 -->
+        <div class="card bg-base-100 md:w-full shadow-xl">
+          <figure>
+            <img class="w-10/12"
+              src="./images/others/latest2.png"
+              alt="Shoes" />
+          </figure>
+          <div class="px-14 md:px-10 py-6 md:py-3 space-y-3">
+            <h2 class="card-title text-2xl font-bold">Motorcycles & Scooters</h2>
+            <p class="text-gray-500">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+            <div class="card-actions">
+              <button class="btn bg-bike-primary">Read More</button>
+            </div>
+          </div>
+      </div>
+         <!-- card-3 -->
+        <div class="card bg-base-100 md:w-full shadow-xl">
+          <figure>
+            <img class="w-10/12"
+              src="./images/others/latest3.png"
+              alt="Shoes" />
+          </figure>
+          <div class="px-14 md:px-10 py-6 md:py-3 space-y-3">
+            <h2 class="card-title text-2xl font-bold">2021 Honda CBR500R</h2>
+            <p class="text-gray-500">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+            <div class="card-actions">
+              <button class="btn bg-bike-primary">Read More</button>
+            </div>
+          </div>
+      </div>
+      </div>
+    </main>
 
     <!-- Footer Section -->
     <footer></footer>
