--- a/index.html
+++ b/index.html
@@ -187,59 +187,202 @@
     <!-- Main Section -->
     <main class="container mx-auto mt-10">
       <!-- text content -->
-      <div class="text-center">
-        <h3 class="text-4xl md:text-5xl mb-4">Featured Bikes In This Year</h3>
-        <p class="text-orange-400 mb-1">Best bike collection</p>
-        <div class="border-b-2 border-orange-400 w-20 mx-auto"></div>
-      </div>
-      <!-- card content -->
-       <div class="mt-10 mb-10 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-5">
-         <!-- card-1 -->
-        <div class="card bg-base-100 md:w-full shadow-xl">
-          <figure>
-            <img class="w-10/12"
-              src="./images/others/latest1.png"
-              alt="Shoes" />
-          </figure>
-          <div class="px-14 md:px-10 py-6 md:py-3 space-y-3">
-            <h2 class="card-title text-2xl font-bold">Ducati XDIAVEL S-73</h2>
-            <p class="text-gray-500">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
-            <div class="card-actions">
-              <button class="btn bg-bike-primary">Read More</button>
+      <section>
+        <div class="text-center">
+          <h3 class="text-4xl md:text-5xl mb-4 uppercase">Featured Bikes In This Year</h3>
+          <p class="text-orange-400 mb-1">Best bike collection</p>
+          <div class="border-b-2 border-orange-400 w-20 mx-auto"></div>
+        </div>
+        <!-- card content -->
+         <div class="mt-10 mb-10 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-5">
+           <!-- card-1 -->
+          <div class="card bg-base-100 md:w-full shadow-xl">
+            <figure>
+              <img class="w-10/12"
+                src="./images/others/latest1.png"
+                alt="Shoes" />
+            </figure>
+            <div class="px-14 md:px-10 py-6 md:py-3 space-y-3">
+              <h2 class="card-title text-2xl font-bold">Ducati XDIAVEL S-73</h2>
+              <p class="text-gray-500">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+              <div class="card-actions">
+                <button class="btn bg-bike-primary">Read More</button>
+              </div>
+            </div>
+        </div>
+           <!-- card-2 -->
+          <div class="card bg-base-100 md:w-full shadow-xl">
+            <figure>
+              <img class="w-10/12"
+                src="./images/others/latest2.png"
+                alt="Shoes" />
+            </figure>
+            <div class="px-14 md:px-10 py-6 md:py-3 space-y-3">
+              <h2 class="card-title text-2xl font-bold">Motorcycles & Scooters</h2>
+              <p class="text-gray-500">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+              <div class="card-actions">
+                <button class="btn bg-bike-primary">Read More</button>
+              </div>
+            </div>
+        </div>
+           <!-- card-3 -->
+          <div class="card bg-base-100 md:w-full shadow-xl">
+            <figure>
+              <img class="w-10/12"
+                src="./images/others/latest3.png"
+                alt="Shoes" />
+            </figure>
+            <div class="px-14 md:px-10 py-6 md:py-3 space-y-3">
+              <h2 class="card-title text-2xl font-bold">2021 Honda CBR500R</h2>
+              <p class="text-gray-500">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+              <div class="card-actions">
+                <button class="btn bg-bike-primary">Read More</button>
+              </div>
+            </div>
+        </div>
+      </section>
+      <!-- happy client -->
+       <section>
+        <div class="mb-10">
+          <h1 class="text-5xl text-center uppercase">Happy <span class="text-orange-500">Clients says</span></h1>
+        </div>
+        <!-- card content -->
+        <div class="grid grid-cols-1 md:grid-cols-3 gap-5 mb-1044444">
+          <!-- card-1 -->
+          <div class="card bg-base-100 w-full shadow-xl">
+            <figure class="px-10 pt-10">
+              <img
+                src="./images/others/user-1.png"
+                alt="Shoes"
+                class="w-4/6" />
+            </figure>
+            <div class="card-body items-center text-center">
+              <p>Slate helps you see how 
+                many more days you need 
+                to work to reach your financial 
+                goal for the month and year.</p>
+                <div class="rating">
+                  <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                  <input
+                    type="radio"
+                    name="rating-2"
+                    class="mask mask-star-2 bg-orange-400"
+                     />
+                  <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                  <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked="checked" />
+                  <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                </div>
+                <h4 class="text-2xl text-blue-500 font-semibold">Regina Miles</h4>
+                <h4 class="font-semibold">Banker</h4>
             </div>
           </div>
-      </div>
-         <!-- card-2 -->
-        <div class="card bg-base-100 md:w-full shadow-xl">
-          <figure>
-            <img class="w-10/12"
-              src="./images/others/latest2.png"
-              alt="Shoes" />
-          </figure>
-          <div class="px-14 md:px-10 py-6 md:py-3 space-y-3">
-            <h2 class="card-title text-2xl font-bold">Motorcycles & Scooters</h2>
-            <p class="text-gray-500">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
-            <div class="card-actions">
-              <button class="btn bg-bike-primary">Read More</button>
+          <!-- card-2 -->
+          <div class="card bg-base-100 w-full shadow-xl">
+            <figure class="px-10 pt-10">
+              <img
+                src="./images/others/user-2.png"
+                alt="Shoes"
+                class="w-4/6" />
+            </figure>
+            <div class="card-body items-center text-center">
+              <p>Slate helps you see how 
+                many more days you need 
+                to work to reach your financial 
+                goal for the month and year.</p>
+                <div class="rating">
+                  <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                  <input
+                    type="radio"
+                    name="rating-2"
+                    class="mask mask-star-2 bg-orange-400"
+                     />
+                  <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                  <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked="checked" />
+                  <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                </div>
+                <h4 class="text-2xl text-blue-500 font-semibold">Regina Miles</h4>
+                <h4 class="font-semibold">Banker</h4>
             </div>
           </div>
-      </div>
-         <!-- card-3 -->
-        <div class="card bg-base-100 md:w-full shadow-xl">
-          <figure>
-            <img class="w-10/12"
-              src="./images/others/latest3.png"
-              alt="Shoes" />
-          </figure>
-          <div class="px-14 md:px-10 py-6 md:py-3 space-y-3">
-            <h2 class="card-title text-2xl font-bold">2021 Honda CBR500R</h2>
-            <p class="text-gray-500">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
-            <div class="card-actions">
-              <button class="btn bg-bike-primary">Read More</button>
+          <!-- card-3 -->
+          <div class="card bg-base-100 w-full shadow-xl">
+            <figure class="px-10 pt-10">
+              <img
+                src="./images/others/user-3.png"
+                alt="Shoes"
+                class="w-4/6" />
+            </figure>
+            <div class="card-body items-center text-center">
+              <p>Slate helps you see how 
+                many more days you need 
+                to work to reach your financial 
+                goal for the month and year.</p>
+                <div class="rating">
+                  <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                  <input
+                    type="radio"
+                    name="rating-2"
+                    class="mask mask-star-2 bg-orange-400"
+                     />
+                  <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                  <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked="checked" />
+                  <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                </div>
+                <h4 class="text-2xl text-blue-500 font-semibold">Regina Miles</h4>
+                <h4 class="font-semibold">Banker</h4>
             </div>
           </div>
-      </div>
-      </div>
+        </div>
+       </section>
+
+       <!-- Frequently Asked Questions -->
+        <section class="mt-24 mb-12">
+          <div class="mb-10">
+            <h1 class="text-center text-5xl">Frequently Asked <span class="text-orange-500">Questions</span></h1>
+          </div>
+          <!-- Questions -->
+          <div class="grid md:grid-cols-2 gap-5 pt-12">
+            <!-- image -->
+            <div class="flex justify-center items-center">
+              <img class="" src="./images/others/faq.png" alt="">
+            </div>
+            <!--  Accordion -->
+            <div class="w-3/4 mx-auto flex items-center">
+              <div class="join join-vertical w-full mt-8">
+                <div class="collapse collapse-arrow join-item border-base-300 border bg-slate-50 rounded-xl mb-5">
+                  <input type="radio" name="my-accordion-4" checked="checked" />
+                  <div class="collapse-title text-xl font-medium">What are the most important things I should
+                    know about riding a bike?</div>
+                  <div class="collapse-content">
+                    <p class="text-gray-500">Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and laws. Get in the mindset of “driving” your bike—not just “riding” your bike. This will help you be a more focused and legally compliant bike rider. </p>
+                  </div>
+                </div>
+                <div class="collapse collapse-arrow join-item border-base-300 border bg-slate-50 rounded-xl mb-5">
+                  <input type="radio" name="my-accordion-4" />
+                  <div class="collapse-title text-xl font-medium">How can I tell if my helmet is old and I need a 
+                    new one?</div>
+                  <div class="collapse-content">
+                    <p class="text-gray-500">Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and laws. Get in the mindset of “driving” your bike—not just “riding” your bike. This will help you be a more focused and legally compliant bike rider.</p>
+                  </div>
+                </div>
+                <div class="collapse collapse-arrow join-item border-base-300 border bg-slate-50 rounded-xl mb-5">
+                  <input type="radio" name="my-accordion-4" />
+                  <div class="collapse-title text-xl font-medium">My bike has been in storage is it safe to ride?</div>
+                  <div class="collapse-content">
+                    <p class="text-gray-500">Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and laws. Get in the mindset of “driving” your bike—not just “riding” your bike. This will help you be a more focused and legally compliant bike rider.</p>
+                  </div>
+                </div>
+                <div class="collapse collapse-arrow join-item border-base-300 border bg-slate-50 rounded-xl mb-5">
+                  <input type="radio" name="my-accordion-4" />
+                  <div class="collapse-title text-xl font-medium">What rules should I follow when riding my bike?</div>
+                  <div class="collapse-content">
+                    <p class="text-gray-500">Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and laws. Get in the mindset of “driving” your bike—not just “riding” your bike. This will help you be a more focused and legally compliant bike rider.</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
     </main>
 
     <!-- Footer Section -->
