--- a/index.html
+++ b/index.html
@@ -386,6 +386,37 @@
     </main>
 
     <!-- Footer Section -->
-    <footer></footer>
+    <footer class=" bg-black text-neutral-content p-10">
+      <div class="container mx-auto">
+        <div class="md:flex md:justify-between">
+                    <!-- 1st side -->
+        <div>
+          <div class="flex gap-6">
+            <p>Download Now</p>
+            <p>License</p>
+          </div>
+          <div class="mt-3">
+            <ul class="flex  gap-5">
+              <li><a href="">About</a></li>
+              <li><a href="">Features</a></li>
+              <li><a href="">Pricing</a></li>
+              <li><a href="">Careers</a></li>
+              <li><a href="">Help</a></li>
+              <li><a href="">Privacy Policy</a></li>
+            </ul>
+          </div>
+        </div>
+        <!-- 2nd side -->
+        <div class="space-y-4 mt-6">
+          <p class="text-2xl">Get the App</p>
+          <img class="w-32" src="./images/others/android.png" alt="">
+          <img class="w-32" src="./images/others/ios.png" alt="">
+        </div>
+        </div>
+        <div class="text-center mt-6">
+          <p>© 2020 bike. All rights reserved</p>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
